# par_sys_exc2

./: CMakeLists.txt  CSVWriter.h  cmake-build-release-mingw64TestOMP_createar.csv  cmake-build-release-mingw64fibontestfilenrfibonaci.csv  fibocalc.h  main.cpp
